--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,10 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/game.tscn", "res://Scenes/Entities/player.tscn", "res://Scenes/Entities/square.tscn", "res://Scenes/Entities/triangle.tscn", "res://Scenes/Entities/circle.tscn", "res://Scenes/Calculation/arc_segment.tscn", "res://Scenes/Audio/audio_manager.tscn", "res://Scenes/Visuals/Particles/particle_manager.tscn")
-current_scene="res://Scenes/Visuals/Particles/particle_manager.tscn"
+current_scene="res://Scenes/game.tscn"
 center_split_offset=-245
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -43,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/ai_component.gd", "res://Scripts/ai_component_circle.gd", "res://Scripts/ai_component_square.gd", "res://Scripts/ai_component_triangle.gd", "res://Scripts/animated_sprite.gd", "res://Scripts/audio_controller.gd", "res://Scripts/audio_manager.gd", "res://Scripts/CharacterBodyBase/base.gd", "res://Scripts/camera.gd", "res://Scripts/circle.gd", "res://Scripts/damage_component.gd", "res://Scripts/debug_text.gd", "res://Scripts/game.gd", "res://Scripts/health_bar.gd", "res://Scripts/health_component.gd", "res://Scripts/CharacterBodyBase/movement.gd", "res://Scripts/obj_indicator.gd", "res://Scripts/particle_controller.gd", "res://Scripts/particle_manager.gd", "res://Scripts/CharacterBodyBase/physics.gd", "res://Scripts/player.gd", "res://Scripts/square.gd", "res://Scripts/statistics.gd", "res://Scripts/tile_generator.gd", "res://Scripts/trail_instance.gd", "res://Scripts/triangle.gd", "res://Scripts/utilities.gd"]
-selected_script="res://Scripts/player.gd"
+selected_script="res://Scripts/ai_component_circle.gd"
 open_help=[]
 script_split_offset=155
 list_split_offset=0
